# font-kit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
c/: Cargo.toml  build.rs
c/src/: lib.rs
examples/: fallback.rs  render-glyph.rs
scripts/: local-cross-ci.sh
src/: error.rs  loader.rs  outline.rs  source.rs  utils.rs
src/loaders/: core_text.rs  directwrite.rs  freetype.rs
src/sources/: core_text.rs  directwrite.rs  fontconfig.rs  multi.rs
tests/: select_font.rs  tests.rs
